utm/tee
regex-test.cpp:95:20: error: expected ';' after expression
    tmp = fabs(tmp)
                   ^
                   ;
regex-test.cpp:116:35: error: too many arguments to function call, expected single argument 'val', have 3 arguments
  void set_dd(double x) { init(x, mm, ss); }
                          ~~~~    ^~~~~~
regex-test.cpp:91:3: note: 'init' declared here
  void init(double val) {
  ^
regex-test.cpp:117:36: error: too many arguments to function call, expected single argument 'val', have 3 arguments
  void set_mm(double x) { init(dd, x, ss); }
                          ~~~~     ^~~~~
regex-test.cpp:91:3: note: 'init' declared here
  void init(double val) {
  ^
regex-test.cpp:118:36: error: too many arguments to function call, expected single argument 'val', have 3 arguments
  void set_ss(double x) { init(dd, mm, x); }
                          ~~~~     ^~~~~
regex-test.cpp:91:3: note: 'init' declared here
  void init(double val) {
  ^
regex-test.cpp:144:17: error: use of undeclared identifier 'buff'
  return string(buff);
                ^
regex-test.cpp:151:5: error: use of undeclared identifier 'reyurn'; did you mean 'return'?
    reyurn res;
    ^~~~~~
    return
6 errors generated.
